# remindy

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  deny.toml
.github/workflows/: ci.yaml
crates/remindy-server/: Cargo.toml
crates/remindy-ui/: Cargo.toml
crates/remindy-ui/src/: hero.rs
crates/remindy-web/: Cargo.toml
crates/remindy-web/src/: main.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: download_tools.rs  main.rs  utills.rs
