[workspace]
resolver = "2"
members = [
    "crates/remindy-server",
    "crates/remindy-ui",
    "crates/remindy-web",
    "crates/xtask",
]


[workspace.dependencies]
dioxus = "0.6.3"
xshell = "0.2"
clap = "4"
camino = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.8"
tokio = "1"
# workspace
remindy-ui = { path = "crates/remindy-ui" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
